# Arma3-SM-Squad

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirments.txt  telegram_bot.py
_telegram/commands/: slash_commands.py
_telegram/utils/: handlers.py
core/: config.py  exceptions.py  utils.py
database/: db.db  db.py  slots.json  slots.py
discord/: discord_init.py
discord/cogs/: get_link_cog.py  slash_commands.py  slash_commands_cog.py
discord/commands/: slash-commands.py  slash_commands.py
discord/events/: event-handler.py  event_handler.py
discord/tickets/: ticket.py  tickets_ui.py
logs/: setup_logs.py
parser/: link.txt  old_parser.py  parser.py  stat_parser.py
parser/ocap_missions/: RBC_200_Whisky_War_v5.html  active_mission.txt
telegram/: __init__.py  telegram_init.py
telegram/commands/: admin.py  slash_commands.py
telegram/utils/: donate.py  handlers.py  keyboards.py  utils.py
